fix bugs with overflow

--- a/style/main.scss
+++ b/style/main.scss
@@ -657,6 +657,7 @@
     // background-position: top 60% right -80%;
     background-position: top 60% right -20%;
     background-size: auto 700px;
+    overflow: hidden;
 
 
     &__title {
